# openclaw-BAID

./: .gitignore  AGENT-DISCOVERY-CONNECTION-DESIGN.md  AGENTID-DEMO-RECORDING-SCRIPT.md  DEMO.md  PROJECT-STRUCTURE-AND-WORKFLOWS.md  README.md  libp2p-mesh-client  package.json
agentid-service/: .env.example  (+7 more)
openclawAgentid/SWIFTCLAW/code/: .env.example  .gitignore  demo_tools.py  main.py  pyproject.toml  requirements.txt  setup_docker.sh  start_local.bat  test_moonshot_api.py  test_real_api.py  test_sandbox.py
openclawAgentid/SWIFTCLAW/code/agent/: __init__.py  llm.py  tool_loop.py.bak  tools.py
openclawAgentid/SWIFTCLAW/code/config/: __init__.py  settings.py
openclawAgentid/SWIFTCLAW/code/desktop/: SwiftClaw.desktop
openclawAgentid/SWIFTCLAW/code/docker/: Dockerfile.sandbox  sandbox-entrypoint.sh
openclawAgentid/SWIFTCLAW/code/gateway/: __init__.py  server.py  telegram.py
openclawAgentid/SWIFTCLAW/code/memory/: __init__.py  database.py  markdown_store.py  models.py  store.py
openclawAgentid/SWIFTCLAW/code/scripts/: install_desktop_entry.sh  install_weather_manual.py  install_weather_skill.py  start_visible_desktop.sh
openclawAgentid/SWIFTCLAW/code/skills/: __init__.py  database.py  github_source.py  manager.py  models.py  parser.py
openclawAgentid/SWIFTCLAW/code/skills/examples/: weather-query-README.md  weather-query.md  web-search.md
openclawAgentid/SWIFTCLAW/code/tests/integration/: test_skill_system.py  test_telegram_bot.py
openclawAgentid/SWIFTCLAW/code/tools/: __init__.py  base.py  bash.py  browser.py  file.py  registry.py  search.py
(+342 files in other folders)
